@@ -93,6 +93,7 @@ z               #C(1d-1 0d0)
 (atan #c(1 2))  #C(1.3389726 0.4023595)
 (tan  #c(1 2))  #C(0.033812825 1.0147936)
 (tanh #c(20 2)) #C(1.0 0.0)
+(cosh #c(1 2))  #C(-0.64214814 1.0686074)
 
 (tan 0)  0
 (tanh 0) 0
